# SlateGallery

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM_REFERENCE.md  EXPORT_FAB_QUICK_REFERENCE.md  HIDDEN_IMAGES_FEATURE.md  HIDDEN_IMAGES_TESTING.md  ImportPhotosFromClipboard.py  ImportPhotosFromClipboard.py.bak  JAVASCRIPT_TESTING.md  README.md  README_TESTING.md  TESTING_BEST_PRACTICES.md  TEST_STATUS_BAR.md  THREADING_ERROR_TESTS_GUIDE.md  bundle_app.py  decode_app.py  pyproject.toml  pyrightconfig.json  run_slate_gallery.py  run_tests.sh  slategallery_latest.txt  slategallery_latest_metadata.json  transfer_cli.py  transfer_config.json
.serena/: project.yml
archive/docs/: BEFORE_AFTER_PERFORMANCE.md  EXPORT_BUTTON_FAB_CHANGES.md  EXPORT_BUTTON_VISUAL_COMPARISON.md  PERFORMANCE_OPTIMIZATION_REPORT.md  REFACTORING_SUMMARY.md  SELECTION_PERSISTENCE_IMPLEMENTATION.md  STATUS_BAR_IMPLEMENTATION.md  STATUS_BAR_VISUAL.md  TESTING_PERFORMANCE_FIXES.md  UI_BEFORE_AFTER.md  UI_MODERNIZATION_SUMMARY.md
archive/docs/tests_gallery/: BADGE_UPDATE_TESTS.md  HIDDEN_IMAGES_TESTS_SUMMARY.md  QUICK_REFERENCE.md  SUMMARY.md
copy/src/: main.py
copy/src/core/: __init__.py  gallery_generator.py
copy/src/utils/: threading.py
src/: __init__.py  main.py  type_defs.py
src/core/: __init__.py  cache_manager.py  config_manager.py  gallery_generator.py  image_processor.py
src/ui/: __init__.py
src/utils/: __init__.py  logging_config.py  threading.py
templates/: gallery_script.js  gallery_styles.css  gallery_template.html
tests/: __init__.py  conftest.py  shared_fixtures.py  test_cache_manager.py  test_config_manager.py  test_edge_cases.py  test_gallery_generator.py  test_gallery_generator_old.py  test_image_processor.py  test_integration.py  test_integration_advanced.py  test_integration_realistic.py  test_multi_folder.py  test_performance_benchmark.py  test_threading.py  test_threading_errors.py  test_thumbnail.py
tests/gallery/: HIDDEN_IMAGES_TESTS.md  INDEX.md  README.md  TEST_GUIDE.md  VALIDATION_CHECKLIST.md  gallery_tests.html  run_tests.sh
