[project]
name = "SlateGallery"
version = "1.0.0"
description = "PyQt6-based photo gallery generator with EXIF metadata extraction"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.9.1",
    "Pillow>=11.3.0",
    "Jinja2>=3.1.6",
    "piexif>=1.1.3",
    "psutil>=7.0.0",
    "typing-extensions>=4.0.0",  # Required for ParamSpec in Python 3.9
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.4",
    "basedpyright>=1.31.0",
    "pytest>=8.4.1",
    "pytest-qt>=4.5.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "coverage>=7.9.2",
]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [".git", "__pycache__", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # Line too long (ruff format will handle)

[tool.basedpyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
ignore = ["venv", ".git"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
